--- a/LinuxBackgroundInfoScreen/CMakeLists.txt
+++ b/LinuxBackgroundInfoScreen/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
+set(CMAKE_CXX_STANDARD 11)
+
 project(DesktopbackgroundInfoScreen)
 
 find_package(X11 REQUIRED)
